ChangeLog 'Dimemas package'

Structure

Date - user - Tool (Simulator | GUI | prv2dim | trf2dim | Other)

	FEATURES: 	explanation of new features

	BUGFIX:   	explanation of bug solved

	CHANGES:  	explanation of codification changes

2014/02/10 - jgonzale - Simulator - 5.2.3
	BUGFIX:		Error when reading external dimemas collectives file

2014/02/05 - jgonzale - Simulator | GUI - 5.2.2
	BUGFIX:		Modules balancing and ratio where wrongly captured in the
				new configuration parsing

	BUGFIX:		Modules definition in the GUI where sorted randomly

2014/02/04 - jgonzale - GUI - 5.2.1
	BUGFIX:		Bug when saving a 'n tasks per node' mapping without 
				pressing ENTER in the text field

	BUGFIX:		Bug when distributing GUI resource files in the 'Makefile.am'

2014/01/28 - jgonzale - Simulator - 5.2.0 (corrected)
	BUGFIX:		Bug when parsing a 'predefined map info' that includes a
				trace

2014/01/27 - jgonzale - Simulator | GUI - 5.2.0 (corrected)
	BUGFIX:		Added 'trims' when reading configuration files in the GUI
				to solve bug #30

	BUGFIX:		Correct defition of the 'IO_fseek' in the dimemas header

	BUGFIX:		Correct creation of output PCF name when output Paraver
				trace name does not have any extension, or the extension
				is different from '.prv'.

	CHANGES:	Changed 'INCLUDES' per 'AM_CPPFLAGS' in the different
				'Makefile.am' files

	BUGFIX:		Latency times were not adjusted when reading new 
				configuration records (multiply the written value per 1e9).

				In addition, 'inter_node' latencies where wrongly used when
				initializing the nodes


	FEATURES:	If the latency is smaller than 1ns, it is discarded when
				executing a communication. This avoids potential problem of
				overlapped states in Paraver

2014/01/24 - jgonzale - Simulator | GUI - 5.2.0
	FEATURES: 	New parameters: '--dim <input_trace>' set a external trace
								'--ppn <tasks_per_node>' predefined mapping
								'--fill' predefined mapping
								'--interlvd' predefined mapping