@@ -10,6 +10,13 @@ Date - user - Tool (Simulator | GUI | prv2dim | trf2dim | Other)
 
 	CHANGES:  	explanation of codification changes
 
+2014/02/17 - jgonzale - Simulator | prv2dim - 5.2.4	
+	BUGFIX:		Bug when generating Paraver trace, communicators numbering
+				do not need +1 offset
+
+	FEATURES:	When translating  Paraver traces generated by Dimemas, the
+				Wait synchronizations may appear inside Send primitives
+
 2014/02/10 - jgonzale - Simulator - 5.2.3
 	BUGFIX:		Error when reading external dimemas collectives file
 
